language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_alternative_pattern_string_prefix_2.snap
---
source: language-server/src/tests/action.rs
expression: "fn wobble(wibble) {\n  case wibble {\n    \"Hello, \" as hello <> name | \"Hey, \" as hello <> name -> hello\n    _ -> \"unknown\"\n  }\n}"
---
----- BEFORE ACTION
fn wobble(wibble) {
  case wibble {
    "Hello, " as hello <> name | "Hey, " as hello <> name -> hello
                                                     ↑            
    _ -> "unknown"
  }
}


----- AFTER ACTION
fn wobble(wibble) {
  case wibble {
    "Hello, " as hello <> _name | "Hey, " as hello <> _name -> hello
    _ -> "unknown"
  }
}
