language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_alternative_pattern_string_prefix_left_side_2.snap
---
source: language-server/src/tests/action.rs
expression: "fn wobble(wibble) {\n  case wibble {\n    \"Hello, \" as hello <> name | \"Hey, \" as hello <> name -> name\n    _ -> \"unknown\"\n  }\n}"
---
----- BEFORE ACTION
fn wobble(wibble) {
  case wibble {
    "Hello, " as hello <> name | "Hey, " as hello <> name -> name
                                            ↑                    
    _ -> "unknown"
  }
}


----- AFTER ACTION
fn wobble(wibble) {
  case wibble {
    "Hello, " <> name | "Hey, " <> name -> name
    _ -> "unknown"
  }
}
