language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_list_pattern_assignment.snap
---
source: language-server/src/tests/action.rs
expression: "fn wibble(wobble: List(Int)) -> Nil {\n  case wobble {\n    [_, ..] as tail -> Nil\n    [] -> Nil\n  }\n}"
---
----- BEFORE ACTION
fn wibble(wobble: List(Int)) -> Nil {
  case wobble {
    [_, ..] as tail -> Nil
               ↑          
    [] -> Nil
  }
}


----- AFTER ACTION
fn wibble(wobble: List(Int)) -> Nil {
  case wobble {
    [_, ..] -> Nil
    [] -> Nil
  }
}
