language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_pattern_assignment_shorthand_with_alternative_patterns.snap
---
source: language-server/src/tests/action.rs
expression: "pub type Wibble {\n  Wibble(a: Int)\n  Wobble(a: Int)\n}\n\nfn wobble(wibble: Wibble) -> Int {\n  case wibble {\n    Wibble(a:) | Wobble(a:) -> 0\n  }\n}"
---
----- BEFORE ACTION
pub type Wibble {
  Wibble(a: Int)
  Wobble(a: Int)
}

fn wobble(wibble: Wibble) -> Int {
  case wibble {
    Wibble(a:) | Wobble(a:) -> 0
           ↑                    
  }
}


----- AFTER ACTION
pub type Wibble {
  Wibble(a: Int)
  Wobble(a: Int)
}

fn wobble(wibble: Wibble) -> Int {
  case wibble {
    Wibble(a: _) | Wobble(a:) -> 0
  }
}
