language-server/src/tests/snapshots/gleam_language_server__tests__action__discard_unused_variable_triggered_at_string_prefix_pattern.snap
---
source: language-server/src/tests/action.rs
expression: "fn wobble(wibble) {\n  case wibble {\n    \"Hello\" as hello <> name -> name\n    _ -> \"unknown\"\n  }\n}"
---
----- BEFORE ACTION
fn wobble(wibble) {
  case wibble {
    "Hello" as hello <> name -> name
               ↑                    
    _ -> "unknown"
  }
}


----- AFTER ACTION
fn wobble(wibble) {
  case wibble {
    "Hello" as  <> name -> name
    _ -> "unknown"
  }
}
